--- a/ReconnectED/app/src/main/res/values/themes.xml
+++ b/ReconnectED/app/src/main/res/values/themes.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.ReconnectED" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:navigationBarColor">#fdfdfd</item>
+    </style>
 
-    <style name="Theme.ReconnectED" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="windowSplashScreenBackground">#008F46</item>
+        <item name="android:navigationBarColor">#fdfdfd</item>
+        <item name="postSplashScreenTheme">@style/Theme.ReconnectED</item>
+    </style>
+
 </resources>
