--- a/ReconnectED-Android/app/src/main/res/values/themes.xml
+++ b/ReconnectED-Android/app/src/main/res/values/themes.xml
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.ReconnectED_A" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:navigationBarColor">#fdfdfd</item>
+    </style>
 
-    <style name="Theme.ReconnectEd" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="windowSplashScreenBackground">#008F46</item>
+        <item name="android:navigationBarColor">#fdfdfd</item>
+        <item name="postSplashScreenTheme">@style/Theme.ReconnectED_A</item>
+    </style>
+    <style name="Theme.App.Starting.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.App.Starting.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.App.Starting.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
