--- a/ReconnectED-Android/app/src/main/res/values/themes.xml
+++ b/ReconnectED-Android/app/src/main/res/values/themes.xml
@@ -7,7 +7,7 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="windowSplashScreenBackground">#008F46</item>
         <item name="android:navigationBarColor">#fdfdfd</item>
-        <item name="postSplashScreenTheme">@style/Theme.ReconnectED_A</item>
+        <item name="postSplashScreenTheme">@style/Theme.ReconnectED</item>
     </style>
     <style name="Theme.App.Starting.NoActionBar">
         <item name="windowActionBar">false</item>
