--- a/ReconnectED-Android/app/src/main/res/layout/app_block_overlay.xml
+++ b/ReconnectED-Android/app/src/main/res/layout/app_block_overlay.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DEFFFFFF"
@@ -19,7 +20,7 @@
             android:layout_height="120dp"
             android:contentDescription="@string/lock_icon"
             android:src="@drawable/ic_lock_large"
-            android:tint="#FFFFFF" />
+            app:tint="#FFFFFF" />
 
         <TextView
             android:layout_width="wrap_content"
